deploy/marketplace-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace
  namespace: mktplc-production
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: marketplace
