deploy/ingress.extension.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: marketplace
  namespace: mktplc-production
spec:
  rules:
    - host: crocuspay.com
      http:
        paths:
          - path: /
            backend:
              serviceName: marketplace
              servicePort: 80
